<resources>
    <string name="new_transaction">New Transaction</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="initial_amount">R0.00</string>
    <string name="enter_amount">Enter amount</string>
    <string name="choose_payee">Choose Payee</string>
    <string name="choose_category">Choose Category</string>
    <string name="select_account">Select Account</string>
    <string name="today_2025">Today, 2025</string>
    <string name="add_description">Add description</string>
    <string name="add_receipt">Add Receipt</string>
    <string name="repeat">Repeat</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="login_slogan">Zero-Based Budgeting Made Simple</string>
    <string name="login_to_account">Login to your account</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password_change">Confirm Password Change</string>
    <string name="name">Name</string>
    <string name="enter_password">Enter your password</string>
    <string name="new_password">Enter new password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_up_prompt">Don\'t have an account? Sign up</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Re-enter your password</string>
    <string name="have_Account">Have an account? Login</string>
    <string name="menu_home">Home</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_add">Add</string>
    <string name="menu_budget">Budget</string>
    <string name="menu_settings">Settings</string>
    <string name="budget_goals">Budget Goals</string>
    <string name="budgeting_goals">Budgeting Goals</string>
    <string name="categories">Categories</string>
    <string name="transaction_categories">Transaction Categories</string>
    <string name="account">Account</string>
    <string name="manage_account">Manage Accounts</string>
    <string name="view_achievements">View Achievements</string>
    <string name="close_button">Close</string>
    <string name="account_name">Account Name</string>
    <string name="account_type">Account Type</string>
    <string name="account_amount">Account Amount</string>
    <string name="save_changes">Save Changes</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="description">Description</string>
    <string name="repeat_transaction">Repeat Transaction</string>
    <string name="upload_receipt">Upload Receipt</string>
    <string name="attach_receipt">Attach Receipt</string>
    <string name="set_goals">Set Goals</string>
    <string name="custom">Custom</string>
    <string name="all_time">All Time</string>
    <string name="app_name">SIK Budgeting</string>
    <string name="na_text">N/A</string>
    <string name="back_button">Back Button</string>
    <string name="bg_curve">Settings Curve Background</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="profile_page">Profile Page</string>
    <string name="sign_out">Sign Out</string>
    <string name="notifications">Notifications</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="password_hash">********</string>
    <string name="recent_badge">Recent badge earned</string>

</resources>