<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp">

<!-- Toolbar Layout -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="48dp"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/close_ic"
            tools:layout_editor_absoluteX="347dp"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:text="Accounts"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="18dp" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAccountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:minWidth="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAccountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_name"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAccountType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minWidth="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilAccountName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAccountType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_type"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAccountAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minWidth="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilAccountType">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAccountAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_amount"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:backgroundTint="@color/lightgreen_color"
        app:cornerRadius="20dp"
        android:text="@string/save_changes"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/tilAccountAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>